<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/secondary_color"
    app:cardCornerRadius="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <!--    https://www.geeksforgeeks.org/cardview-using-recyclerview-in-android-with-example/-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- ImageVIew to display our Course Image -->

        <ImageView
            android:id="@+id/qrcode_visual"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            android:cropToPadding="true"
            android:padding="5dp"
            android:src="@drawable/app_logo" />

        <!-- Text View to display Course Name -->
        <TextView
            android:id="@+id/qrcode_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/qrcode_visual"
            android:text="@string/qrcode_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!-- Text VIew to display Course Rating -->
        <!-- Image used in present in drawable folder -->
        <TextView
            android:id="@+id/qrcode_namefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/qrcode_name"
            android:layout_alignStart="@+id/qrcode_name"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="2dp"
            android:text="@string/qrcode_namefield"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/qrcode_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qrcode_namefield"
            android:layout_alignStart="@+id/qrcode_name"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="2dp"
            android:text="@string/qrcode_score"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/qrcode_scorefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qrcode_score"
            android:layout_alignStart="@+id/qrcode_score"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="2dp"
            android:text="@string/qrcode_scorefield"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/qrcode_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qrcode_scorefield"
            android:layout_alignStart="@+id/qrcode_name"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="2dp"
            android:text="@string/qrcode_timestamp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/qrcode_timestampfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qrcode_timestamp"
            android:layout_alignStart="@+id/qrcode_score"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:drawablePadding="2dp"
            android:text="@string/qrcode_timestampfield"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>