<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/navbar_background"
    app:cardCornerRadius="12dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true">

    <!--    https://www.geeksforgeeks.org/cardview-using-recyclerview-in-android-with-example/-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <ImageView
            android:id="@+id/qrcode_visual"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/app_name"
            android:cropToPadding="true"
            android:padding="5dp"
            android:src="@drawable/user_startup_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/infogroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/qrcode_visual">

            <TextView
                android:id="@+id/qrcode_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/josefin_slab"
                android:text="@string/qrcode_name"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/qrcode_namefield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="2dp"
                android:fontFamily="@font/josefin_slab"
                android:text="@string/qrcode_namefield"
                android:textColor="@color/startup_button_background"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/qrcode_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="2dp"
                android:fontFamily="@font/josefin_slab"
                android:text="@string/qrcode_score"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/qrcode_scorefield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="2dp"
                android:fontFamily="@font/josefin_slab"
                android:text="@string/qrcode_scorefield"
                android:textColor="@color/startup_button_background"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>