<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:scaleType="centerInside"
        android:src="@drawable/app_logo"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/username_field_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/username_field_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="casual"
        app:cornerRadius="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <EditText
        android:id="@+id/username_field"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/username_hint"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/username_field_text"
        app:layout_constraintTop_toBottomOf="@+id/username_field_text"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/email_field_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_field_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="casual"
        app:cornerRadius="20sp"
        app:layout_constraintStart_toStartOf="@+id/username_field_text"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <EditText
        android:id="@+id/Email_field"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:paddingLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/username_hint"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:inputType="textVisiblePassword|textNoSuggestions|textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/username_field"
        app:layout_constraintStart_toStartOf="@+id/email_field_text"
        app:layout_constraintTop_toBottomOf="@+id/email_field_text"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/phone_number_field_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number_field_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="casual"
        app:cornerRadius="20sp"
        app:layout_constraintStart_toStartOf="@+id/email_field_text"
        app:layout_constraintTop_toBottomOf="@+id/Email_field" />

    <EditText
        android:id="@+id/phone_number_field"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawablePadding="10dp"
        android:hint="@string/username_hint"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:inputType="textVisiblePassword|textNoSuggestions|textEmailAddress|phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/Email_field"
        app:layout_constraintStart_toStartOf="@+id/phone_number_field_text"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_field_text"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/secondary_color"
        android:paddingLeft="50dp"
        android:paddingTop="15dp"
        android:paddingRight="50dp"
        android:paddingBottom="15dp"
        android:text="@string/create_account_button_text"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textAppearance="@style/startup_page_button_style"
        android:textSize="30dp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_field"
        app:layout_constraintVertical_bias="0.53999996" />

</androidx.constraintlayout.widget.ConstraintLayout>